--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
- 
-
-}
-
-
-.vertical-lr{
-    writing-mode: vertical-rl;
-}
-
+.vertical-lr {
+    writing-mode: vertical-lr;
+  }
